ProdIND/ProdPrograms/force-app/main/default/objects/Non_Agri_Income__c/Non_Agri_Income__c.object-meta.xml
<CustomObject>
    <label>Non Agri Income</label>
    <nameField>
        <displayFormat>NAI-{00000}</displayFormat>
        <label>Non Agri Income Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Non Agri Incomes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>