ProdIND/ProdPrograms/force-app/main/default/objects/Non_Agri_Income__c/fields/Category_Master__c.field-meta.xml
<CustomField>
    <fullName>Category_Master__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Category Master</label>
    <referenceTo>Category_Master__c</referenceTo>
    <relationshipLabel>Non Agri Incomes</relationshipLabel>
    <relationshipName>Non_Agri_Incomes</relationshipName>
    <type>Lookup</type>
</CustomField>