ProdIND/ProdPrograms/force-app/main/default/objects/Non_Agri_Income__c/fields/Field_Investigation__c.field-meta.xml
<CustomField>
    <fullName>Field_Investigation__c</fullName>
    <label>Field Investigation</label>
    <referenceTo>Field_Investigation__c</referenceTo>
    <relationshipLabel>Non Agri Incomes</relationshipLabel>
    <relationshipName>Non_Agri_Incomes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>